--- a/product-preview-card-component-main/styles.css
+++ b/product-preview-card-component-main/styles.css
@@ -3,6 +3,7 @@
 
 :root {
   --darkCyan: hsl(158, 36%, 37%);
+  --darkergreen: #1a4031;
   --cream: hsl(30, 38%, 92%);
   --veryDarkBlue: hsl(212, 21%, 14%);
   --darkGrayishBlue: hsl(228, 12%, 48%);
@@ -20,42 +21,46 @@ body {
   font-size: 14px;
   text-align: center;
   overflow-y: hidden;
+  background-color: var(--cream);
 }
 
 /* Container Div */
 .container {
   margin: 2rem;
-  background-color: var(--cream);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
+/* Image container*/
+.image {
+  width: 21.25rem;
+  height: 15rem;
+  margin: 0;
+  padding: 0;
+}
+
 /* Image */
 .image img {
-  width: 340px;
-  height: 240px;
+  width: 21.25rem;
+  height: 15rem;
   object-fit: cover;
-  border-radius: 10px;
+  border-radius: 10px 10px 0 0;
 }
 
 /* Text */
 .text {
   background-color: var(--white);
-  width: 340px;
-  height: 370px;
+  width: 21.25rem;
+  height: 23.125rem;
   display: flex;
   flex-direction: column;
+  border-radius: 0 0 10px 10px;
   text-align: left;
-  padding: 0.5rem 1rem 0 1rem;
+  padding: 0 1rem;
 }
-/* .top,
-.big,
-.description,
-.price {
-  padding: 10px;
-} */
+
 .top {
   font-size: 12px;
   letter-spacing: 6px;
@@ -108,7 +113,7 @@ body {
 }
 button {
   width: 100%;
-  height: 45px;
+  height: 3rem;
   background-color: var(--darkCyan);
   border-radius: 10px;
   color: white;
@@ -116,9 +121,47 @@ button {
   padding: 0;
   line-height: 2.75rem;
   text-align: center;
+  border: none;
+}
+button:hover {
+  cursor: pointer;
+  background-color: var(--darkergreen);
 }
 svg {
   margin: 0.5rem 0.5rem auto auto;
+}
+
+@media screen and (min-width: 600px) {
+  .container {
+    flex-direction: row;
+    margin: 8rem auto;
+  }
+  .image {
+    width: 18.75rem;
+    height: 28.125rem;
+  }
+  .image img {
+    width: 18.75rem;
+    height: 28.125rem;
+    border-radius: 10px 0 0 10px;
+  }
+  .text {
+    width: 18.75rem;
+    height: 28.125rem;
+    padding: 1.5rem;
+    border-radius: 0 10px 10px 0;
+  }
+  .big {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+    margin: 0.5rem 0;
+  }
+  .description {
+    line-height: 1.35rem;
+  }
+  svg {
+    margin: 0.75rem 0.5rem auto auto;
+  }
 }
 
 /* Attribution */
