--- a/results-summary-component-main/styles.css
+++ b/results-summary-component-main/styles.css
@@ -53,8 +53,12 @@
   width: 100%;
 }
 
+.summary > h3 {
+  margin: 0.75rem 0 0 1rem;
+}
+
 .stats-container {
-  margin-top: 2rem;
+  margin-top: 1rem;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -69,6 +73,31 @@
   justify-content: space-between;
   width: 80%;
   margin: auto 1rem;
+}
+
+.stat {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.stat > h4 {
+  margin-left: 0.5rem;
+}
+
+button {
+  text-align: center;
+  margin: 1rem 2.5rem;
+  padding: 1rem 0;
+  border: none;
+  border-radius: 20px;
+  background-color: var(--cobaltBlue);
+  color: var(--white);
+  font-family: 'Hanken Grotesk', sans-serif;
+  font-weight: 700;
+  font-size: 0.75rem;
+  cursor: pointer;
+  width: 80%;
 }
 
 /* Attribution */
